--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ include_directories(./include)
 # aux_source_directory(./src SRC)
 # add_library(${PROJECT_NAME} ${SRC})
 
-add_executable(pointer_array pointer_array.c)
+add_executable(ram_distribution ram_distribution.c)
 # target_link_libraries(main ${PROJECT_NAME})
