--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ include_directories(./include)
 # aux_source_directory(./src SRC)
 # add_library(${PROJECT_NAME} ${SRC})
 
-add_executable(0x10_questions 0x10_questions.c)
+add_executable(test_linux_list test_linux_list.c)
 # target_link_libraries(main ${PROJECT_NAME})
