--- a/c_exercises_45/.vscode/settings.json
+++ b/c_exercises_45/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
+    "files.associations": {
+        "stdlib.h": "c"
+    }
 }
