分别在src include，.exe在根目录，.o在build目录  自动创建build文件夹

--- a/make_makefile/Makefile
+++ b/make_makefile/Makefile
@@ -31,6 +31,8 @@ $(TARGET):$(OBJS)
 	$(CC) -o $@ $^ $(CFLAGS) $(SYSLIBS) 
 # 依赖的目标
 $(OBJS):
+# # 如果没有BUILD文件夹就创建
+# 	@if [ ! -d $(BUILD) ]; then mkdir -p $(BUILD); fi
 	$(foreach src,$(SRCS),\
 		$(call SRC_TO_OBJ,\
 					$(src),\
